# tarkov-inventory-tracker

./: .eslintrc.js  .gitignore  README.md  index.html  jest.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  web2exe.json  webpack.config.js
data/: items.json
data/template/: template.7z
data/template/headwear/: headwear-bimp-set.bimp
src/: app.ts  gear.ts  item-match.test.ts
src/__test__/: item-match.test.ts
src/equipment-finder/: equipment-finder-worker.js  equipment-finder-worker.mjs  equipment-finder.mjs  equipment-finder.test.ts  equipment-finder.ts
src/scraper/: Headwear.html  scraper.test.tsx  scraper.ts
src/test/: item-match.test.ts
tarkov_inventory_tracker/: app.py
tests/: test_equipment.py  test_matching.py  test_tarkov-template-match.py  test_tarkov_inventory_tracker_python.py
tracker/: __main__.py  equipment.py  generatetemplate.py  matching.py  template.py
