[tool.poetry]
name = "tarkov-inventory-tracker"
version = "0.1.0"
description = ""
authors = ["Luke Dowell <luke@dowell.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
mss = "^6.1.0"
numpy = "^1.23.1"
opencv-python = "^4.6.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
