[tool.poetry]
name = "tarkov-inventory-tracker"
version = "0.1.0"
description = ""
authors = ["Luke Dowell <luke@dowell.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
mss = "^6.1.0"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
PyQt5 = "^5.15.7"
pylint = "^2.14.5"
opencv-python = "4.5.5.62"
mypy = "^0.971"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
